[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rlaux"
version = "0.1.0"
description = "Local lightweight RL training task manager"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "typer>=0.12.0",
  "psutil>=5.9.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "jinja2>=3.1.0",
]

[project.scripts]
rlaux = "rlaux.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["rlaux*"]

[tool.setuptools.package-data]
rlaux = ["templates/*.html"]
